[project]
name = "agents-ag-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai-agents>=0.4.2",
    "pydantic-ai>=1.9.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "toyaikit>=0.0.5",
]
